--- a/#src/scss/_price.scss
+++ b/#src/scss/_price.scss
@@ -1,5 +1,5 @@
 .price {
-	padding: 73px 0 0 0;
+	padding: 73px 0 50px 0;
 	&__wrapper{
 		display: flex;
 		flex-direction: column;
@@ -8,7 +8,6 @@
 	&__descriptions {
 		display: flex;
 		margin-top: 33px;
-		align-items: stretch;
 	}
 	&__descr {
 		flex: 0 1 25%;
@@ -19,6 +18,7 @@
 			align-items: center;
 			text-align: center;
 			width: 266px;
+			min-height: 355px;
 			margin-right: 20px;
 		}
 	}
